커뮤니티 html 연결

--- a/scapp/templates/blog.html
+++ b/scapp/templates/blog.html
@@ -59,8 +59,8 @@
                   <a class="nav-link dropdown-toggle menu" href="#" id="navbardrop" style="font-size: 20px"
                     data-toggle="dropdown">My Page</a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">정보게시판</a>
-                    <a class="dropdown-item" href="#">자유게시판</a>
+                    <a class="dropdown-item" href="{% url 'comunity1' %}">정보게시판</a>
+                    <a class="dropdown-item" href="{% url 'comunity2' %}">자유게시판</a>
   
                 </div>
               </li>
