--- a/scapp/templates/blog3.html
+++ b/scapp/templates/blog3.html
@@ -37,19 +37,6 @@
       </div>
     </div>
   </div>
-  <body style="overflow-x:visible">
-    <div class="main-container contact-color">
-      <div class="inside-container ">
-        <div class="row row-spc">
-          <div class="col-md-12  col-disp">
-            <div class="icon-scp">
-              <div class="left-side">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   <!--menu-->
   <body>
     <nav class="navbar fixed-top navbar-light" style="background-color: #ffffff;">
@@ -72,8 +59,8 @@
                   <a class="nav-link dropdown-toggle menu" href="#" id="navbardrop" style="font-size: 20px"
                     data-toggle="dropdown">My Page</a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">정보게시판</a>
-                    <a class="dropdown-item" href="#">자유게시판</a>
+                    <a class="dropdown-item" href="{% url 'comunity1' %}">정보게시판</a>
+                    <a class="dropdown-item" href="{% url 'comunity2' %}">자유게시판</a>
   
 
                 </div>
@@ -88,9 +75,7 @@
   </div>
   </div>
   </div>
-
 <body>
-  <div class="main-container blog-container">
   <div class="row blog-row-padd ">
     <div class="col-12 side-bar-bg">
       <div class="our-header text-center">
@@ -130,7 +115,6 @@
 
     </div>
   </div>
-
 
   <!--blog posts-->
 
