--- a/scapp/templates/index.html
+++ b/scapp/templates/index.html
@@ -44,8 +44,8 @@
                 <a class="nav-link dropdown-toggle menu" href="#" id="navbardrop" style="font-size: 20px"
                   data-toggle="dropdown">My Page</a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">정보게시판</a>
-                  <a class="dropdown-item" href="#">자유게시판</a>
+                  <a class="dropdown-item" href="{% url 'comunity1' %}">정보게시판</a>
+                  <a class="dropdown-item" href="{% url 'comunity2' %}">자유게시판</a>
 
                 </div>
               </li>
@@ -171,6 +171,12 @@
               </div>
               <div class="item item-over ">
                 <div class="partner-logo ">
+                  <img src="../static/image/logos/Logo 5.png" alt="">
+                </div>
+
+              </div>
+              <div class="item item-over ">
+                <div class="partner-logo ">
                   <img src="../static/image/logos/logo 3.PNG" alt="">
                 </div>
 
@@ -190,6 +196,12 @@
               <div class="item item-over ">
                 <div class="partner-logo ">
                   <img src="../static/image/logos/Logo2.png" alt="">
+                </div>
+
+              </div>
+              <div class="item item-over ">
+                <div class="partner-logo ">
+                  <img src="../static/image/logos/logo 3.PNG" alt="">
                 </div>
 
               </div>
