--- a/templates/freeboard/freenavbar.html
+++ b/templates/freeboard/freenavbar.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>자유 게시판</title>
+  <title>정보 게시판</title>
+  <link rel="stylesheet" href="../../static/css/board.css" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -15,11 +16,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../static/css/freeboard.css" type="text/css">
+  
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{% url 'home' %}">StudyCastle</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,6 +29,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         {% if request.user.is_authenticated %}
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle menu" href="{% url 'board:index' %}" id="navbardrop"
               style="font-size: 20px;" data-toggle="dropdown">게시판</a>
@@ -38,8 +40,7 @@
           </div>
       </li>
 
-
-        <a class="nav-item nav-link active" href="{% url 'freeboard:write' %}">글 쓰기</a>
+        <a class="nav-item nav-link active" href="{% url 'board:write' %}">글 쓰기</a>
         <a class="nav-item nav-link active">{{ request.user.username }} 님 접속 중</a>
         <a class="nav-item nav-link active" href="{% url 'user:logout' %}">로그아웃</a>
         <a class="nav-item nav-link active" href="{% url 'user:profile' %}">mypage</a>
@@ -50,8 +51,23 @@
       </div>
     </div>
   </nav>
+  <div class="back" ></div>
+<nav>
+
+  <a href="{% url 'board:index' %}" id="navbardrop"
+      style="font-size: 20px;" data-toggle="dropdown">정보게시판</a>
+  <a href="{% url 'board:write' %}">글쓰기</a>
+  <a>{{ request.user.username }} 님 접속 중</a>
+  <a href="{% url 'user:logout' %}">로그아웃</a>
+  <a href="{% url 'user:profile' %}">마이페이지</a>
+  <a href="{% url 'freeboard:index' %}">자유게시판</a>
+    {% if request.user.is_authenticated %}
+    {% else %}
+  <a href="{% url 'user:login' %}">로그인</a>
+  <a href="{% url 'user:join' %}">회원가입</a>
+  {% endif %}
+</nav>
   {% block content %}
   {% endblock %}
 </body>
-
 </html>
