--- a/templates/freeboard/freeboard_delete.html
+++ b/templates/freeboard/freeboard_delete.html
@@ -3,7 +3,7 @@
 <div class="container" style="max-width: 540px;">
     <div class="row" style="margin-top:20px;">
         <div class="col-sm-12">
-            <div class="card border-secondary">
+            <div class="card border-0">
               <div class="card-body">
                   <form method="post" action="{% url 'freeboard:delete' pk=freeboard.id %}">
                       {% csrf_token %}
