--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -5,11 +5,11 @@
     {% if user.is_authenticated %}
     <div class="row" style="margin:100px auto;">
         <div class="col-sm-12">
-            <div class="card">
+            <div class="card"  style="background-color: rgba(245, 245, 245, 0);">
                 <div class="card-header">
                     <h5>MY PAGE</h5>
                 </div>
-                <div class="card-body">
+                <div class="card-body text-dark">
                    
                     <p class="card-text" style="margin-bottom: 0;">      
                         <p>{{  user.username  }} 님이 접속중입니다.</p>
