--- a/static/css/blog-style.css
+++ b/static/css/blog-style.css
@@ -221,22 +221,23 @@ border: none;
 }
 .popular-link {
     font-family: 'Open Sans';
-    font-size: 12px;
-    color: #777777;
+    font-size: 12px solid;
+    color: black;
 }
 .popular-link button{
     background-color: #ffffff;
-    border: 1px solid #ececec;
+    border: 0.75px solid #DCDDDD;
+    border-radius: 50%;
     padding: 10px 30px;
     margin-right: 10px;
     margin-top: 10px;
     border-radius: 6px;
     min-width: 115px;
+    box-shadow: 2px 2px 4px #999999;
 }
 .popular-link button:hover{
-    background-color: #f65aa7;
+    background-color: #23a042;
     color: #ffffff;
-}
 .pagin-nr{
     background-color: #f9f9f9;
 }
