--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,8 +71,9 @@ i:hover{
     .nav-contain{
     margin-top: 0;
     margin-bottom: 0;
-    
+    height: 98px;
     }
+
     .navbar img{
         width: 200px;
         
@@ -84,7 +85,7 @@ i:hover{
         font-weight: bold;
         font-size: 20px;
         line-height: 10px;
-        padding: 0 20px;
+        padding: 0 10px;
         text-decoration: none;        
     }
     .nav-list .menu:hover {
@@ -301,10 +302,10 @@ i:hover{
         margin-top: 10px;
     }
     .our-header i{
-        color: #c0bfbf;
+        color: black;
     }
     .our-header i:hover{
-        color: #c0bfbf;
+        color: black;
     }
     .our-spec h3 {
         font-size: 16px;
@@ -315,7 +316,7 @@ i:hover{
         max-height:19px;
     }
     .our-spec p {
-        color: #777777;
+        color: black;
         font-size: 14px;
         text-align: center;
         font-family: 'Noto Sans KR', sans-serif;
