--- a/templates/board/board_form.html
+++ b/templates/board/board_form.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row" style="margin-top:100px;">
         <div class="col-sm-12">
-            <div class="card border-secondary">
+            <div class="card border-0" style="background-color: rgba(245, 245, 245, 0);">
               <div class="card-header">게시글 작성</div>
               <div class="card-body">
                   <form method="post" action="{% url 'board:write' %}">
@@ -17,12 +17,14 @@
                             {% if field.html_name == 'content' %}
                             <textarea class="form-control {% if field.errors|length > 0 %}is-invalid{% endif %}"
                                       id="{{ field.id_for_label }}"
-                                      name="{{ field.html_name }}">{{ field.value|default_if_none:'' }}</textarea>
+                                      name="{{ field.html_name }}"
+                                      style="background-color: rgba(245, 245, 245, 0);">{{ field.value|default_if_none:'' }}</textarea>
                             {% else %}
                             <input type="{{ field.field.widget.input_type }}"
                                    class="form-control {% if field.errors|length > 0 %}is-invalid{% endif %}"
                                    id="{{ field.id_for_label }}"
                                    name="{{ field.html_name }}"
+                                   style="background-color: rgba(245, 245, 245, 0);"
                                    value="{% if field.html_name == 'username' %}{{ request.user.username }}{% else %}{{ field.value|default_if_none:'' }}{% endif %}">
                             {% endif %}
                             {% for error in field.errors %}
@@ -30,7 +32,7 @@
                             {% endfor %}
                         </div>
                       {% endfor %}
-                      <input class="btn btn-primary btn-lg btn-block" type="submit" value="저장">
+                      <input class="btn btn-block" style="background-color: rgba(245, 245, 245, 0.3);" type="submit" value="저장">
                   </form>
               </div>
             </div>
