--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -4,10 +4,10 @@
 <div class="container">
 
     <div style="margin:100px auto;">
-        <div class="col-sm-12">
-            <div class="card border-secondary">
+        <div class="col-sm-12 text-dark">
+            <div class="card border-0" style="background-color: rgba(245, 245, 245, 0.2);">
                 <div class="card-header"><h5>HOT</h5></div>
-                <div class="card-body text-danger">
+                <div class="card-body text-dark border-0">
                     {% for board in hot_boards %}
                         <p class="card-text" style="margin-bottom: 0;">
                             <a href="{% url 'board:detail' board.id %}">{{ board.title }} [{{ board.average_like }}]</a>
@@ -21,12 +21,12 @@
 
     {% for board in boards %}
     <div class="row" style="margin:20px auto;">
-        <div class="col-sm-12">
-          <div class="card border-secondary">
+        <div class="col-sm-12 text-dark">
+          <div class="card border-0" style="background-color: rgba(245, 245, 245, 0.2);">
               <div class="card-body">
-                  <h5 class="card-title"><a href="{% url 'board:detail' board.id %}">{{ board.title }}</a></h5>
+                  <h5 class="card-title text-dark"><a href="{% url 'board:detail' board.id %}">{{ board.title }}</a></h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{ board.created_at|date:"Y-m-d H:i:s" }}</h6>
-                <p class="card-text">
+                <p class="card-text text-dark">
                     <a href="{% url 'board:detail' board.id %}">{{ board.comments_count }} Comments</a> /
                     <a href="{% url 'board:detail' board.id %}">{{ board.average_like|default_if_none:0 }} ♥</a>
                 </p>
@@ -36,11 +36,12 @@
     </div>
     {% endfor %}
     {% if is_paginated %}
+    
     <div class="row">
         <nav aria-label="Page navigation example">
-          <ul class="pagination">
+          <ul class="pagination" > 
             {% if page_obj.has_previous %}
-            <li class="page-item">
+            <li class="page-item" >
               <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
                 <span class="sr-only">Previous</span>
@@ -50,11 +51,11 @@
 
             {% for page in page_range %}
               {% if page == page_obj.number %}
-              <li class="page-item active">
+              <li class="page-item active" style="background-color: rgba(245, 245, 245, 0.4);">
                   <a class="page-link" href="?page={{ page }}">{{ page }}</a>
               </li>
               {% else %}
-              <li class="page-item">
+              <li class="page-item" style="background-color: rgba(245, 245, 245, 0.4);">
                   <a class="page-link" href="?page={{ page }}">{{ page }}</a>
               </li>
               {% endif %}
@@ -71,6 +72,7 @@
           </ul>
         </nav>
     </div>
+ 
     {% endif %}
 </div>
 {% endblock %}
