--- a/templates/board/board_update.html
+++ b/templates/board/board_update.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row" style="margin-top:20px;">
         <div class="col-sm-12">
-            <div class="card border-secondary">
+            <div class="card border-0" style="background-color: rgba(245, 245, 245, 0);">
               <div class="card-body">
                   <form method="post" action="{% url 'board:update' pk=board.id %}">
                       {% csrf_token %}
@@ -16,20 +16,22 @@
                             {% if field.html_name == 'content' %}
                             <textarea class="form-control {% if field.errors|length > 0 %}is-invalid{% endif %}"
                                       id="{{ field.id_for_label }}"
-                                      name="{{ field.html_name }}">{{ field.value|default_if_none:'' }}</textarea>
+                                      name="{{ field.html_name }}"
+                                      style="background-color: rgba(245, 245, 245, 0);">{{ field.value|default_if_none:'' }}</textarea>
                             {% else %}
                             <input type="{{ field.field.widget.input_type }}"
                                    class="form-control {% if field.errors|length > 0 %}is-invalid{% endif %}"
                                    id="{{ field.id_for_label }}"
                                    name="{{ field.html_name }}"
-                                   value="{% if field.html_name == 'username' %}{{ request.user.username }}{% else %}{{ field.value|default_if_none:'' }}{% endif %}">
+                                   value="{% if field.html_name == 'username' %}{{ request.user.username }}{% else %}{{ field.value|default_if_none:'' }}{% endif %}" 
+                                   style="background-color: rgba(245, 245, 245, 0);">
                             {% endif %}
                             {% for error in field.errors %}
                                 <div class="invalid-feedback">{{ error }}</div>
                             {% endfor %}
                         </div>
                       {% endfor %}
-                      <input class="btn btn-primary btn-lg btn-block" type="submit" value="수정">
+                      <input class="btn btn-lg btn-block" style="background-color: rgba(245, 245, 245, 0);" type="submit" value="수정">
                   </form>
               </div>
             </div>
