--- a/templates/board/comment_form.html
+++ b/templates/board/comment_form.html
@@ -4,7 +4,7 @@
 <div class="container" style="max-width: 540px;">
     <div class="row" style="margin-top:20px;">
         <div class="col-sm-12">
-            <div class="card border-secondary">
+            <div class="card border-0">
               <div class="card-header">댓글 작성</div>
               <div class="card-body">
                   <form method="post" action="">
