--- a/templates/board/navbar.html
+++ b/templates/board/navbar.html
@@ -19,24 +19,53 @@
   
 </head>
 
-<body>    <div class="back" ></div> 
-  <nav class="navbar navbar-expand-lg ">
- 
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'home' %}">StudyCastle</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-  
-      {% if request.user.is_authenticated %}
-        <a class="nav-item nav-link active" href="{% url 'board:write' %}">WRITE</a>
+        {% if request.user.is_authenticated %}
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle menu" href="{% url 'board:index' %}" id="navbardrop"
+              style="font-size: 20px;" data-toggle="dropdown">게시판</a>
+          <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'board:index' %}">정보게시판</a>
+              <a class="dropdown-item" href="{% url 'freeboard:index' %}">자유게시판</a>
+
+          </div>
+      </li>
+
+        <a class="nav-item nav-link active" href="{% url 'board:write' %}">글 쓰기</a>
         <a class="nav-item nav-link active">{{ request.user.username }} 님 접속 중</a>
-        <a class="nav-item nav-link active" href="{% url 'user:logout' %}">LOGOUT</a>
-        <a class="nav-item nav-link active" href="{% url 'user:profile' %}">MYPAGE</a>
+        <a class="nav-item nav-link active" href="{% url 'user:logout' %}">로그아웃</a>
+        <a class="nav-item nav-link active" href="{% url 'user:profile' %}">mypage</a>
         {% else %}
-        <a class="nav-item nav-link active" href="{% url 'user:login' %}">LOGIN</a>
-        <a class="nav-item nav-link active" href="{% url 'user:join' %}">SIGN UP</a>
+        <a class="nav-item nav-link active" href="{% url 'user:login' %}">로그인</a>
+        <a class="nav-item nav-link active" href="{% url 'user:join' %}">회원가입</a>
         {% endif %}
       </div>
     </div>
   </nav>
+  <div class="back" ></div>
+<nav>
 
+  <a href="{% url 'board:index' %}">정보게시판</a>
+  <a href="{% url 'board:write' %}">글쓰기</a>
+  <a href="{% url 'freeboard:index' %}">자유게시판</a>
+    {% if request.user.is_authenticated %}
+    <a>{{ request.user.username }} 님 접속 중</a>
+    <a href="{% url 'user:logout' %}">로그아웃</a>
+    <a href="{% url 'user:profile' %}">마이페이지</a>
+    {% else %}
+  <a href="{% url 'user:login' %}">로그인</a>
+  <a href="{% url 'user:join' %}">회원가입</a>
+  {% endif %}
+</nav>
   {% block content %}
   {% endblock %}
 </body>
