--- a/templates/main-navbar.html
+++ b/templates/main-navbar.html
@@ -32,10 +32,14 @@
                             <a class="menu" href="{% url 'blog' %}">리뷰</a>
                             <a class="menu" href="{% url 'user:profile' %}">마이페이지</a>
                             <span class="menu last-spc color-line"> | </span>
+                            <a class="menu">{{ request.user.username }} 님 접속 중</a>
+                            {% if request.user.is_authenticated %}
+                            <a class="menu icon-color  last-spc" href="{% url 'user:logout' %}"><i
+                                class="fas fa-user-alt-slash"></i></a>
+                            {% else %}
                             <a class="menu icon-color last-spc" href="{% url 'user:login' %}"><i
                                     class="fas fa-user-plus"></i></a>
-                            <a class="menu icon-color  last-spc" href="{% url 'user:logout' %}"><i
-                                    class="fas fa-user-alt-slash"></i></a>
+                            {% endif %}
                         </div>
                     </div>
                 </nav>
