--- a/templates/user/join.html
+++ b/templates/user/join.html
@@ -1,9 +1,9 @@
 {% extends 'board/navbar.html' %}
 {% block content %}
-<div class="container" style="max-width: 540px;">
+<div class="container" style="max-width: 540px; background-color: rgba(245, 245, 245, 0);">
     <div class="row" style="margin-top:20px;">
         <div class="col-sm-12">
-            <div class="card border-secondary">
+            <div class="card border-0">
                 <div class="card-header">회원가입</div>
                 <div class="card-body">
                     <form method="post" action="{% url 'user:join' %}">
@@ -14,13 +14,14 @@
                             <input type="{{ field.field.widget.input_type }}"
                                 class="form-control {% if field.errors|length > 0 %}is-invalid{% endif %}"
                                 id="{{ field.id_for_label }}" name="{{ field.html_name }}"
-                                value="{{ field.value|default_if_none:'' }}">
+                                value="{{ field.value|default_if_none:'' }}"
+                                style="background-color: rgba(245, 245, 245, 0);">
                             {% for error in field.errors %}
                             <div class="invalid-feedback">{{ error }}</div>
                             {% endfor %}
                         </div>
                         {% endfor %}
-                        <button type="submit" class="btn btn-primary btn-lg btn-block">가입</button>
+                        <button type="submit" style="background-color: rgba(245, 245, 245, 0.3);" class="btn btn-block">가입</button>
                     </form>
                 </div>
             </div>
