--- a/templates/board/comment_form.html
+++ b/templates/board/comment_form.html
@@ -22,7 +22,7 @@
                             {% endfor %}
                         </div>
                       {% endfor %}
-                      <button type="submit" class="btn btn-primary btn-lg btn-block">가입</button>
+                      <button type="submit" class="btn btn-block">가입</button>
                     </form>
               </div>
             </div>
