--- a/templates/freeboard/freeboard_update.html
+++ b/templates/freeboard/freeboard_update.html
@@ -28,7 +28,7 @@
                             {% endfor %}
                         </div>
                       {% endfor %}
-                      <input class="btn btn-primary btn-lg btn-block" type="submit" value="수정">
+                      <input class="btn btn-block" type="submit" value="수정">
                   </form>
               </div>
             </div>
