--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,6 +1,6 @@
 {% extends 'board/navbar.html' %}
 <div class="card">
-        <div class="card-body">
+        <div class="card-body border-0" style="background-color: rgba(245, 245, 245, 0);">
 {% block title %}비밀번호 변경 완료!{% endblock %}
 </div>
 {% block content %}</div>
