--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,12 +2,12 @@
 {% block title %}Password change form{% endblock %}
 {% block content %}
 <div class="col-sm-12">
-    <div class="card">
+    <div class="card border-0" style="background-color: rgba(245, 245, 245, 0);">
         <div class="card-body">
 <form method="post">
   {% csrf_token %} 
   {{ form.as_p }}
 
-  <input type="submit" value="Submit" />
+  <input type="submit" value="Submit"/>
 </form>
 {% endblock %}
