--- a/templates/user/join.html
+++ b/templates/user/join.html
@@ -3,7 +3,7 @@
 <div class="container" style="max-width: 540px; background-color: rgba(245, 245, 245, 0);">
     <div class="row" style="margin-top:20px;">
         <div class="col-sm-12">
-            <div class="card border-0">
+            <div class="card border-0" style="background-color: rgba(245, 245, 245, 0);">
                 <div class="card-header">회원가입</div>
                 <div class="card-body">
                     <form method="post" action="{% url 'user:join' %}">
