--- a/templates/user/resend_verify_email.html
+++ b/templates/user/resend_verify_email.html
@@ -20,7 +20,7 @@
                             {% endfor %}
                         </div>
                         {% endfor %}
-                        <button type="submit" class="btn btn-primary btn-lg btn-block">인증 이메일 보내기</button>
+                        <button type="submit" class="btn btn-block">인증 이메일 보내기</button>
                     </form>
                 </div>
             </div>
