--- a/scproject/static/css/blog-single-style.css
+++ b/scproject/static/css/blog-single-style.css
@@ -194,7 +194,7 @@ margin: 0 5px;
     width: 100%!important;
 }
 .view-blog{
-    text-decoration: underline;
+    text-decoration: none;
     text-transform: uppercase;
     font-size: 13px;
      
