--- a/static/css/board.css
+++ b/static/css/board.css
@@ -8,6 +8,7 @@ body {
     color: #212529;
     text-align: center;
     background-color: #fff;
+    text-decoration:none;
     
 }
 
@@ -36,6 +37,8 @@ nav{
   position: flex;
   top:50px;
   text-align:center;
+  text-decoration:none;
+  
 }
 nav a{
   font-family: 'Oswald', sans-serif;
@@ -55,10 +58,12 @@ nav a:before{
   width: 100%;
   height: 3px;
   background:#16151b;
+  text-decoration:none;
   top:47%;
   animation:out 0.2s cubic-bezier(1, 0, 0.58, 0.97) 1 both;
 }
 nav a:hover:before{
+  text-decoration:none;
   animation:in 0.2s cubic-bezier(1, 0, 0.58, 0.97) 1 both;
 
 }
@@ -102,4 +107,3 @@ nav a:hover:before{
     animation:show .2s #{$i*0.1+1}s ease 1 both;
   }
 }
-
