--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 .main-container {
     max-width: 1950px;
-    width: 70%;
+    
     margin: 0 auto;
     overflow: visible;
     }
@@ -68,11 +68,7 @@ i:hover{
     background-color: white;
     
     }
-    .nav-contain{
-    margin-top: 0;
-    margin-bottom: 0;
-    height: 98px;
-    }
+
 
     .navbar img{
         width: 200px;
@@ -83,7 +79,7 @@ i:hover{
         font-family: 'Noto Sans KR', sans-serif;
         font-family: 'Noto Sans', sans-serif;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 10px;
         padding: 0 10px;
         text-decoration: none;        
@@ -93,6 +89,10 @@ i:hover{
     }
     .nav-link .dropdown-togle .menu{
         color: #31BA45;
+    }
+
+    .dropdown:hover{
+        color: #31BA45;  
     }
     .color-line{
         color: #080808!important;
@@ -108,7 +108,8 @@ i:hover{
         color: #31BA45!important;
         margin: 1px auto
     }
-    
+
+
     @media (max-width: 1200px){
         .nav-list .menu, .menu-last{
             text-align: center;
@@ -151,13 +152,13 @@ i:hover{
     }
     .first-slider {
         min-height: 800px;
-        
+       
         background-image: url('../image/max-image/bussines-2.jpg');
         background-size: cover;
     }
     .first-slider-1 {
         min-height: 800px;
-       
+        
         background-image: url('../image/max-image/bussines-1.jpg');
         background-size: cover;
     }
@@ -1094,7 +1095,7 @@ i:hover{
         width: 95%!important;
     }
     .view-blog{
-        text-decoration: underline;
+        text-decoration: none;
         text-transform: uppercase;
         font-size: 13px;
         font-family: 'Noto Sans KR', sans-serif;
