--- a/templates/freeboard/comment_form.html
+++ b/templates/freeboard/comment_form.html
@@ -5,7 +5,7 @@
         <div class="col-sm-12">
             <div class="card border-0" style="background-color: rgba(245, 245, 245, 0);">
               <div class="card-header">댓글 작성</div>
-              <div class="card-body">
+              <div class="card-body" style="background-color: rgba(245, 245, 245, 0);">
                   <form method="post" action="">
                       {% csrf_token %}
                       {% for field in form %}
