--- a/templates/index.html
+++ b/templates/index.html
@@ -23,13 +23,14 @@
   <title>Home</title>
 </head>
 <!--carousel-->
+<center>
 <div class="main-container carousel-height">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide col-lg-8 col-md-8 col-sm-8" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active first-slider">
         <div class="inside-container">
           <div class="row">
-            <div class="col-lg-12  ">
+            <div class="col-lg-12">
               <div class="carousel-text">
                 <h1>조선대학교 멋쟁이 사자처럼 <span class="bs-card"> 'STUDYCASTLE'</span></h1>
                 <p>STUDYCASTLE <br> STUDYCASTLE </p>
@@ -43,9 +44,9 @@
         </div>
       </div>
       <div class="carousel-item  first-slider-1">
-        <div class="inside-container">
+        <div class="inside-container col-lg-8 col-md-8 col-sm-8" >
           <div class="row">
-            <div class="col-lg-12 ">
+            <div class="col-lg-12">
               <div class="carousel-text">
                 <h1>조선대학교 멋쟁이 사자처럼 <span class="bs-card"> 'STUDYCASTLE'</span></h1>
                 <p>STUDYCASTLE <br> STUDYCASTLE </p>
@@ -69,7 +70,7 @@
     </div>
   </div>
 </div>
-
+</center>
 
 
 
