--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -3,6 +3,7 @@
 
 {% block content %}
     {% if validlink %}
+    <div class="card-body border-0" style="background-color: rgba(245, 245, 245, 0);">
         <p>Please enter your new password.</p>
         <form action="" method="post">
             <div style="display:none">
@@ -29,5 +30,5 @@
         <h1>Failed</h1>
         <p>The password reset link was invalid. Please request a new password.</p>
     {% endif %}
-
+</div>
 {% endblock %}
