--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,6 @@
 {% extends 'board/navbar.html' %}
 {% block title %}Password reset done{% endblock %}
 {% block content %}
+<div class="card border-0" style="background-color: rgba(245, 245, 245, 0);">
 <p>이메일을 확인해 보세요!</p>
 {% endblock %}
