--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends 'board/navbar.html' %}
 {% block title %}Password reset form{% endblock %}
 {% block content %}
-
+<div class="card border-0" style="background-color: rgba(245, 245, 245, 0);">
 <form action="" method="post">
 	{% csrf_token %}
     {% if form.email.errors %}
