--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -3,7 +3,7 @@
 <div class="container" style="max-width: 540px; background-color: rgba(245, 245, 245, 0);">
     <div class="row" style="margin-top:20px;">
         <div class="col-sm-12">
-            <div class="card border-0">
+            <div class="card border-0"  style="background-color: rgba(245, 245, 245, 0);">
                 <div class="card-header">로그인</div>
                 <div class="card-body">
                     {% for message in messages %}
