--- a/templates/main-navbar.html
+++ b/templates/main-navbar.html
@@ -32,7 +32,7 @@
                             <a class="menu" href="{% url 'review:index' %}">리뷰</a>
                             
                             <span class="menu last-spc color-line"> | </span>
-                           
+                            <div id="d-day" class="d-day"></div>
                             {% if request.user.is_authenticated %} 
                             <a class="menu">{{ request.user.username }} 님 접속 중</a>
                             <a class="menu icon-color  last-spc" href="{% url 'user:logout' %}"><i
@@ -52,5 +52,23 @@
     {% block content %}
     {% endblock %}
 </body>
+<script>
+    //디데이 종료 일자 설정
+const countDownDate = new Date("november 15, 2019").getTime();
 
+//1초마다 갱신되도록 함수 생성,실행
+const x = setInterval(function() {
+    // 오늘 날짜 등록
+    const now = new Date().getTime();
+
+    // 종료일자에서 현재일자를 뺀 시간
+    const distance = countDownDate - now;
+
+    // 각 변수에 일, 시, 분, 초를 등록
+    const d = Math.floor(distance / (1000 * 60 * 60 * 24));
+
+    //id가 d-day인 HTML코드에 내용 삽입
+    document.getElementById("d-day").innerHTML = "수능일까지 " + d +"일 남음";
+});
+</script>
 </html>
