--- a/templates/review/review_update.html
+++ b/templates/review/review_update.html
@@ -18,6 +18,8 @@
                                       id="{{ field.id_for_label }}"
                                       name="{{ field.html_name }}"
                                       style="background-color: rgba(245, 245, 245, 0);">{{ field.value|default_if_none:'' }}</textarea>
+                                      {% elif field.html_name == 'volume' or field.html_name == 'runningtime' or field.html_name == 'fun' %}
+                                      {{field}}
                             {% else %}
                             <input type="{{ field.field.widget.input_type }}"
                                    class="form-control {% if field.errors|length > 0 %}is-invalid{% endif %}"
