--- a/templates/review/reviewnavbar.html
+++ b/templates/review/reviewnavbar.html
@@ -59,7 +59,7 @@
   <nav>
     <div class="col-md-12 col-lg-12" style="margin:100px auto;">
       <a href="{% url 'home' %}" class="text-dark">HOME</a>
-      <a href="{% url 'board:write' %}" class="text-dark">WRITE</a>
+      <a href="{% url 'review:write' %}" class="text-dark">WRITE</a>
       {% if request.user.is_authenticated %}
       <a>{{ request.user.username }}접속 중</a>
       <a href="{% url 'user:logout' %}" class="text-dark">LOGOUT</a>
